This is a forward port of revision 610286

* Make both the Fancy Plotter Settings, and the System guard applet settings Non-Modal 
* Set the title of the system guard applet to be "System Guard Settings" 

BUG: 98708 



svn path=/trunk/KDE/kdebase/workspace/; revision=610289